5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4179/executions/1807_2565.log
== TEST (2019-06-11 17:03:50) 
-- CODE:
from numpy import *
vet1=array(eval(input("Medias: ")))
vet2=array(eval(input("Presenca: ")))
ch=int(input("Carga horaria: "))

vet3=zeros(3, dtype=int)

for i in range(size(vet1)):
	if (vet1[i]>=5 and vet2[i] >= ch*75/100):
		
		
	
		
		




-- ERROR:
File "XXXX", line 18
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:13:10) 
-- CODE:
from numpy import *
vet1=array(eval(input("Medias: ")))
vet2=array(eval(input("Presenca: ")))
ch=int(input("Carga horaria: "))
apr=0
repn=0
repf=0
vet3=zeros(3, dtype=int)

for i in range(size(vet1)):
	if (vet1[i]>=5 and vet2[i] >= ch*75/100):
		apr=apr+1
	if (vet1[i]<5):
		repn=repn+1
	if (vet2[i]<ch*75/100):
		repf=repf+1
print(vet3)
		
		
		
	
		
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:14:16) 
-- CODE:
from numpy import *
vet1=array(eval(input("Medias: ")))
vet2=array(eval(input("Presenca: ")))
ch=int(input("Carga horaria: "))
apr=0
repn=0
repf=0

for i in range(size(vet1)):
	if (vet1[i]>=5 and vet2[i] >= ch*75/100):
		apr=apr+1
	if (vet1[i]<5):
		repn=repn+1
	if (vet2[i]<ch*75/100):
		repf=repf+1
	
	vet3=zeros(3, dtype=int)
	
print(vet3)
		
		
		
	
		
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:15:19) 
-- CODE:
from numpy import *
vet1=array(eval(input("Medias: ")))
vet2=array(eval(input("Presenca: ")))
ch=int(input("Carga horaria: "))
apr=0
repn=0
repf=0

for i in range(size(vet1)):
	if (vet1[i]>=5 and vet2[i] >= (ch*(75/100))):
		apr=apr+1
	if (vet1[i]<5):
		repn=repn+1
	if (vet2[i]<ch*75/100):
		repf=repf+1
	
	vet3=zeros(3, dtype=int)
	
print(vet3)
		
		
		
	
		
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:17:20) 
-- CODE:
from numpy import *
vet1=array(eval(input("Medias: ")))
vet2=array(eval(input("Presenca: ")))
ch=int(input("Carga horaria: "))

vet3=zeros(3, dtype=int)

for i in range(size(vet1)):
	if (vet1[i]>=5 and vet2[i] >= (ch*(75/100))):
		vet3[0]=vet3[0]+1
	if (vet1[i]<5):
		vet3[1]=vet3[1]+1
	if (vet2[i]<(ch*(75/100))):
		vet3[2]=vet3[2]+1

print(vet3)
		
		
		
	
		
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 17:17:45) 
-- CODE:
from numpy import *
vet1=array(eval(input("Medias: ")))
vet2=array(eval(input("Presenca: ")))
ch=int(input("Carga horaria: "))

vet3=zeros(3, dtype=int)

for i in range(size(vet1)):
	if (vet1[i]>=5 and vet2[i] >= (ch*(75/100))):
		vet3[0]=vet3[0]+1
	if (vet1[i]<5):
		vet3[1]=vet3[1]+1
	if (vet2[i]<(ch*(75/100))):
		vet3[2]=vet3[2]+1

print(vet3)
		
		
		
	
		
		




-- EXECUTION TIME:
1.0098
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
